Make quote and semicolon use consistent.

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
-  <title>Wendy Dherin ~ Portfolio</title>
+  <title>Wendy Dherin</title>
 </head>
- 
+
 <body>
   <div id="render-target"></div>
 </body>
