Revert "Make quote and semicolon use consistent."
This reverts commit 4eb23d174e48342ea1b76d73298b556faaf8d51b.

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
-  <title>Wendy Dherin</title>
+  <title>Wendy Dherin ~ Portfolio</title>
 </head>
-
+ 
 <body>
   <div id="render-target"></div>
 </body>
